--- a/source/sass/2-basics/_typography.sass
+++ b/source/sass/2-basics/_typography.sass
@@ -11,6 +11,9 @@ h1, h2, h3, h4, h5, h6
   // uses font from _fonts.scss
   font-family: 'Roboto Slab', serif
 
+h3
+  color: $complimentary2
+
 h2
   font-family: 'Merriweather', serif
 
