--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -132,3 +132,6 @@ $color-listing: zip($color-mono-list, $color-mono-name)
 //  @media screen and (min-width: 0px) and (max-width: 400px)
 //    display: block
 
+
+h1
+  color: black
